--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,9 @@ body {
 }
 
 body {
-  background-color: #039be5;
+  background-color: #4f207a;
 }
-.card-content h3 {
+.card-content h2 {
   font-size: 1.4rem;
 }
 .row {
@@ -72,4 +72,10 @@ h2 {
 
 select{
   display: block
+}
+
+span{
+  display: block;
+  text-align: center;
+  background: grey;
 }
